<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <item android:id="@+id/menu1"
            android:title="@string/menu_1"
            android:icon = "@drawable/ic_baseline_settings_24"
            app:showAsAction="always" />
        <item android:id="@+id/menu2"
            android:title="@string/menu_2"
            android:icon = "@drawable/ic_baseline_favorite_24"
            android:visible="false"
            app:showAsAction="ifRoom"/>
</menu>