...
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/select_mode"
        app:layout_constraintBottom_toBottomOf="@+id/switch_theme"
        app:layout_constraintEnd_toStartOf="@+id/switch_theme"
        app:layout_constraintStart_toStartOf="@+id/tv_setting_title"
        app:layout_constraintTop_toTopOf="@+id/switch_theme" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_theme"
...
        android:layout_marginEnd="32dp"
        android:text="@string/dark_mode"
        app:layout_constraintEnd_toEndOf="@+id/tv_setting_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_setting_title" />

    <Button
        android:id="@+id/bt_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="@+id/tv_setting_title"
        app:layout_constraintStart_toStartOf="@+id/tv_setting_title"
...
